@@ -2,6 +2,8 @@ Revision history for Perl extension Math::BigInt::Parts.
 
 2018-xx-xx v0.04
 
+* Only prompt when run interactively.
+
 * Increment version number.
 
 2016-12-08 v0.03
